--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,6 @@
 <html>
     <head>
+        <link rel="stylesheet" href='../static/style.css' type='text/css'/>
     </head>
     <body>
         <div id="content"></div>
