Add emit_all_users for active user count. Add user count hook and update to content. Add style for user count.

--- a/static/style.css
+++ b/static/style.css
@@ -53,3 +53,15 @@ li {
     height: 100%;
     width: 5%;
 }
+
+.users {
+    width: 10%;
+    position: absolute;
+    left: 35%;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    color: white;
+    font-size: 20pt;
+    border: 3px solid white;
+}
