--- a/static/style.css
+++ b/static/style.css
@@ -80,9 +80,14 @@ li {
     text-align: center;
     height: 100vh;
     align-items: center;
-    margin-left: 45%;
+    margin-left: 25%;
 }
 
-.button {
+.joinInnerContainer {
     width: 20%;
+}
+
+.heading {
+    color: white;
+    font-size: 20pt;
 }
