--- a/static/style.css
+++ b/static/style.css
@@ -2,12 +2,12 @@
 body {
     background: rgb(116,120,124);
     background: radial-gradient(circle, rgba(116,120,124,1) 13%, rgba(44,62,75,1) 50%, rgba(0,0,0,1) 79%);
-    width: 80%;
+    width: auto;
 }
 
 .chatbox{
-    height: 100%;
-    width: 100%;
+    height: 90%;
+    width: auto;
 }
 
 h1 {
@@ -19,9 +19,11 @@ h1 {
 }
 
 ul {
+    display: inline-block;
+    vertical-align: top;
     padding-left: 10px;
-    height: 80%;
-    width: auto;
+    height: 95%;
+    width: 80%;
     border: 3px solid red;
     background-image: url(boxxy-8755-2560x1600.jpg);
     background-repeat: no-repeat;
@@ -37,11 +39,14 @@ li {
     margin-top: 10px;
     color: white;
     font-size: 16pt;
+    height: auto;
+    width: auto;
 }
 
 .submitButton {
     margin-top: 0px;
-    height: 4%;
+    margin-bottom: 5px;
+    height: 5%;
     width: auto;
     border: 3px solid white;
 }
@@ -59,6 +64,7 @@ li {
 .users {
     margin: 0px;
     width: 10%;
+    height: auto;
     position: absolute;
     left: 35%;
     align-items: center;
@@ -80,7 +86,6 @@ li {
     text-align: center;
     height: 100vh;
     align-items: center;
-    margin-left: 25%;
 }
 
 .joinInnerContainer {
@@ -90,4 +95,17 @@ li {
 .heading {
     color: white;
     font-size: 20pt;
+}
+
+.userList {
+    text-align: center;
+    background: black;
+    display: inline-block;
+    vertical-align: top;
+    padding-left: 10px;
+    height: 95%;
+    width: 18%;
+    border: 3px solid red;
+    margin: 0;
+    overflow-y:auto;
 }
